iOS fetch system language

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "keywords": [
     "react-native"
   ],
-  "author": "",
+  "author": "happyming9527",
   "license": "",
   "peerDependencies": {
     "react-native": "^0.29.0"
